Update our custom scss

--- a/src/assets/scss/custom/custom.scss
+++ b/src/assets/scss/custom/custom.scss
@@ -1,3 +1,5 @@
+@import "components/card";
 @import "components/image-effects";
 @import "components/navbar";
+@import "components/ng-select";
 @import "components/toastr";
