Update our main app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+<ngx-loading-bar ref="router"></ngx-loading-bar>
+
+<main class="page-wrapper">
+
+  <!-- header -->
+  <app-header></app-header>
+
+  <!-- pages -->
+  <router-outlet></router-outlet>
+
+</main>
+
+<!-- footer -->
+<app-footer></app-footer>
