--- a/src/app/pages/_internal/development/development.component.html
+++ b/src/app/pages/_internal/development/development.component.html
@@ -24,7 +24,12 @@
         aria-label="Post image"></a>
 
       <div class="col-sm-12 col-lg-8">
-        <div class="pt-4 pb-sm-4 ps-sm-4 pe-lg-4">
+        <div class="p-0 pt-4 p-md-4">
+          <div class="mb-3">
+            <span class="badge bg-info rounded-pill">
+              v{{ item.tag_name }}
+            </span>
+          </div>
           <h3>
             <a [href]="item.html_url" target="_blank">
               {{ item.name }}
