--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
   <div class="container position-relative z-2 pt-2 pt-sm-4 pt-md-5">
     <div class="row justify-content-center pt-5">
       <div class="col-lg-9 col-xl-8 text-center pt-5 mt-1">
-        <a routerLink="/updates"
+        <a routerLink="/development"
           class="d-inline-flex align-items-center fs-sm fw-semibold text-decoration-none bg-warning bg-opacity-10 text-warning rounded-pill py-2 px-3">
           <span class="fw-semibold lh-sm" *ngIf="lastUpdate">{{ lastUpdate.name }}</span>
           <i class="ai-arrow-right fs-lg ms-2 me-n1"></i>
@@ -672,7 +672,7 @@
 
 <!-- Pricing / Comparison -->
 <section class="position-relative bg-dark pt-2 pt-lg-4 pt-xl-5" style="background: linear-gradient(90deg, #121519 0%, #191C20 51.04%, #121519 100%);
-      ">
+        ">
   <div class="jarallax position-absolute top-0 start-0 w-100 h-100" data-jarallax data-speed="0.4">
     <div class="jarallax-img" style="background-image: url(assets/img/landing/saas-4/pricing-bg-pattern.png);">
     </div>
