--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,27 @@
-<p>
-  page-not-found works!
-</p>
+<div class="d-flex flex-column flex-lg-row justify-content-between min-vh-100 position-relative">
+  <div class="position-absolute top-0 start-0 w-100 h-100 d-lg-none">
+    <div class="d-dark-mode-none position-absolute top-0 start-0 w-100 h-100" style="background-color: #f2f3f7;"></div>
+  </div>
+  <div class="d-flex flex-column justify-content-center w-lg-50 position-relative z-2 vh-100">
+    <div class="text-center text-lg-start pt-5 pb-3 py-lg-5 px-3 px-sm-4 px-lg-5 mx-auto" style="max-width: 630px;">
+
+      <h1 class="display-1">Not Found!</h1>
+      <p class="lead pb-2 mb-4 mb-lg-5">
+        That looks like an error 404. The page you are looking for was either moved,
+        removed or might've never existed in the first place.
+      </p>
+
+      <a class="btn btn-lg btn-primary" href="/">Go to homepage</a>
+
+    </div>
+  </div>
+  <div class="d-flex flex-column position-relative justify-content-end align-items-center w-lg-50 overflow-hidden">
+    <div class="position-absolute top-0 start-0 w-100 h-100 d-none d-lg-block">
+      <div class="d-none d-dark-mode-block position-absolute top-0 start-0 w-100 h-100"
+        style="background-image: url(assets/img/lethaliize/background.webp);"></div>
+
+      <div class="d-none d-dark-mode-block position-absolute top-0 start-0 w-100 h-100"
+        [ngStyle]="{ 'background': swiperBG }"></div>
+    </div>
+  </div>
+</div>
