Update our header

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -25,13 +25,8 @@
       </div>
       -->
 
-    <a class="btn btn-primary btn-sm fs-sm rounded-pill order-lg-3 me-3 d-none d-sm-inline-flex ms-auto"
-      routerLink="updates">
-      <i class="ai-activity fs-xl me-2 ms-n1"></i>
-      Mod Updates
-    </a>
-
-    <a class="btn btn-info btn-sm fs-sm rounded-pill order-lg-3 d-none d-sm-inline-flex" routerLink="development">
+    <a class="btn btn-info btn-sm fs-sm rounded-pill order-lg-2 d-none d-sm-inline-flex ms-auto"
+      routerLink="development">
       <i class="ai-activity fs-xl me-2 ms-n1"></i>
       Development
     </a>
@@ -206,18 +201,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="modpacks" routerLinkActive="active">
-            <i class="ai-folder fs-xl me-2"></i>
-            Modpacks
+          <a class="nav-link" routerLink="updates" routerLinkActive="active">
+            <i class="ai-download fs-xl me-2"></i>
+            Updates
+            <span class="badge bg-danger fs-xs rounded-pill ms-2">12</span>
           </a>
         </li>
       </ul>
-      <div class="d-sm-none p-3 mt-n3">
-        <a class="btn btn-primary w-100 rounded-pill mb-1" routerLink="updates">
-          <i class="ai-activity fs-xl me-2 ms-n1"></i>
-          Mod Updates
-        </a>
-      </div>
       <div class="d-sm-none p-3 mt-n3">
         <a class="btn btn-info w-100 rounded-pill mb-1" routerLink="development">
           <i class="ai-activity fs-xl me-2 ms-n1"></i>
