--- a/src/assets/scss/custom/components/_toastr.scss
+++ b/src/assets/scss/custom/components/_toastr.scss
@@ -85,6 +85,7 @@ $theme-color-interval: 8% !default;
 
     .toast-title {
       font-weight: bold;
+      @extend .mb-2;
     }
     .toast-message {
       word-wrap: break-word;
