Push update for markdown styling

--- a/src/assets/scss/custom/custom.scss
+++ b/src/assets/scss/custom/custom.scss
@@ -1,5 +1,6 @@
 @import "components/card";
 @import "components/image-effects";
+@import "components/markdown";
 @import "components/navbar";
 @import "components/ng-select";
 @import "components/toastr";
